--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   
+  # State Management
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  
+  # Charts
+  fl_chart: ^0.68.0
+  
   # Date & Time
   intl: ^0.19.0
   
